--- a/index.css
+++ b/index.css
@@ -35,17 +35,21 @@ body {
 .kumiko-container:nth-child(even) {
   animation: animateEven 100s linear infinite;
 }
-.kumiko-container:nth-child(even) img:hover:focus:active {
-  transform: rotate3d(1, 1, 0, 25deg);
+@media (any-hover: hover) {
+  .kumiko-container:nth-child(even) img:hover {
+    transform: rotate3d(1, 1, 0, 25deg);
+  }
 }
 .kumiko-container:nth-child(odd) {
   animation: animateOdd 100s linear infinite;
 }
-.kumiko-container:nth-child(odd) img:hover:focus:active {
-  transform: rotate3d(1, 1, 0, -25deg);
+@media (any-hover: hover) {
+  .kumiko-container:nth-child(odd) img:hover {
+    transform: rotate3d(1, 1, 0, -25deg);
+  }
 }
 .kumiko-container img {
-  touch-action: manipulation;
+  touch-action: none;
   width: 120px;
   height: 120px;
   cursor: grab;
