--- a/index.css
+++ b/index.css
@@ -64,6 +64,10 @@ body {
   box-shadow: rgba(195, 199, 203, 0.25) 0px 6px 12px -2px, rgba(255, 255, 255, 0.3) 0px 3px 7px -3px;
 }
 
+.no-animation {
+  animation: none !important;
+}
+
 @keyframes animateEven {
   0%, 100% {
     transform: translateX(0dvw);
